--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Eduardo Faleiro\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=C:\\Users\\EduardoFaleiro\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Projetos\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
