--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,15 @@ dependencies:
   community_material_icon: ^5.9.55
   google_fonts: ^6.1.0
   image: ^4.1.3
+  hive: ^2.2.3
+  hive_generator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.7
 
 flutter:
   fonts:
