--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   image: ^4.1.3
   hive: ^2.2.3
   hive_generator: ^2.0.1
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
